--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -4,10 +4,14 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="css/style.bundle.css">
+  <!-- <link rel="stylesheet" href="styles/loader.css"> -->
+  <link rel="stylesheet" href="styles/index.css">
+  <script src="bundle.script.js"></script>
 
   <title><%=title%></title>
 </head>
 
 <body>
-  <header><%=title%></header>
+  <header>
+  	<h1><%=title%></h1>
+  </header>
