--- a/src/html/views/test.html
+++ b/src/html/views/test.html
@@ -1,10 +1,10 @@
 <% var data = {
-  title: "Index page"
+  title: "Test page"
 }; %>
 <%= _.template(require(INCLUDES_PATH+'header.html'))(data) %>
 
 	<main>
-		<h2>index</h2>
+		<h2>test</h2>
 	</main>
 
 <%= _.template(require(INCLUDES_PATH+'footer.html'))(data) %>
